--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Server for user web application",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
