--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Server for user web application",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "heroku-postbuild":"npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
